syntax = "proto3";
package service;

option go_package = "./proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Evaluation {
  rpc ClockSync(Clock) returns (Clock);
  rpc Logs(google.protobuf.Empty) returns (stream Event);
}

message Clock {
  google.protobuf.Timestamp timesent = 1;
  google.protobuf.Timestamp timereceived = 2;
}

message Event {
  string eventId = 1;
  string deviceId = 2;
  google.protobuf.Timestamp timestamp = 3;
  string activity = 4;
  uint32 state = 5;
  string config = 6;
  string runNum = 7;
  string error = 8;

  uint64 byteSize = 9; // download & upload size
  string filename = 10; // filename
}
